--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-tasks": "0.0.2",
     "gulp-traceur": "^0.17.0",
     "gulp-util": "^3.0.4",
+    "promise-callback": "^3.0.0",
     "traceur": "0.0.86",
     "traceur-runtime": "0.0.59"
   },
